--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h2>Filipe, prati nastavu!!!</h2>
     <h3>Bravo fico</h3>
     <p>proba</p>
+<img src="https://picsum.photos/800/600" alt="">
 </body>
 </html>
