--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1>Aleksandra Fica i Velja</h1>
     <h2>Filipe, prati nastavu!!!</h2>
     <h3>Bravo fico</h3>
+
+    <p>Filip opet ne prati</p>
 </body>
 </html>
