--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Aleksandra Fica i Velja</h1>
     <h2>Filipe, prati nastavu!!!</h2>
-    <h3>Bravo fico</h3>
+    <h3>Bravo ficoooo</h3>
     <p>proba</p>
 <img src="https://picsum.photos/800/600" alt="">
 </body>
